# lune

./: .gitignore  Prelude.lune  README.md  cabal.project  flake.nix  lune.cabal
.beads/: issues.jsonl  metadata.json
.github/workflows/: ci.yml
app/: Main.hs
core/: lune_core_ir_v0_1.md
docs/: FFI.md  Formatting.md  lsp-architecture.md  lsp.md  nova-audit.md  process.md
docs/plans/: 2026-02-03-atomic-concurrency.md  2026-02-03-v01-polish-and-concurrency.md  2026-02-04-database-design.md  2026-02-04-database-milestone-1.md  2026-02-04-database-milestone-2.md  2026-02-04-database-milestone-3.md  2026-02-04-database-milestone-4.md  2026-02-04-database-milestone-5.md  2026-02-04-database-milestone-6.md  2026-02-04-float-json-design.md  2026-02-04-list-literals.md  2026-02-04-tuple-syntax-design.md  2026-02-04-tuple-syntax.md  2026-02-04-web-framework-design.md  2026-02-05-bytes-and-protocol-design.md  2026-02-05-database-milestone-7.md  2026-02-05-database-milestone-8.md  2026-02-05-web-framework-enhancements.md  2026-02-06-remove-http-primitives.md  2026-02-12-go-runtime-target.md  2026-02-12-orm-schema-derive-impl.md  2026-02-12-orm-schema-derive.md  2026-02-16-nix-flake-alpha-package-design.md  2026-02-17-lsp-vfs-milestone-2.md  2026-02-17-scheduler.md  2026-02-18-cooperative-fibers.md  2026-02-18-fuel-based-cps-evaluator.md  2026-02-18-mn-scheduling.md  2026-02-18-preemption-points.md  2026-02-19-pipe-operators-design.md  2026-02-19-pipe-operators.md  2026-02-22-io-task-primitives.md  2026-02-22-postgres-task-migration.md  2026-02-23-health-agent-design.md  2026-02-23-health-agent-impl.md
examples/: 00_Hello.lune  01_ParsePort_Result.lune  02_Records_Point.lune  03_Validation_Map2.lune  04_HKTs_MapM.lune  05_Parser_Newtype.lune  06_STM_Counter.lune  07_ClassInstance_Sanity.lune  10_Json_Decode.lune  10_Json_Encode.lune  10_Json_OneOf_EdgeCase.lune  10_Json_Parse.lune  11_Atomic_Basic.lune  12_Fiber_Basic.lune  13_STM_OrElse.lune  14_File_Read.lune  15_File_Write.lune  16_Echo_Server.lune  17_Http_Parse.lune  18_Api_Server.lune  19_Tuples.lune  20_FFI_Puts.lune  20_Hello_Postgres.lune  21_Database_Decode.lune  21_FFI_Strlen.lune  22_Database_Query.lune  23_Database_CRUD.lune  24_Database_Helpers.lune  25_Database_Transaction.lune  26_Database_Pool.lune  27_Bytes.lune  28_Tls.lune  29_Binary_Socket.lune  30_Generic_Pool_Test.lune  31_SQLite_Pool_Example.lune  32_Query_Route_Match.lune  33_Query_Params.lune  34_Get_Header.lune  35_Request_Helpers.lune  36_Response_Helpers.lune  (+19 more)
examples/09_Typeclasses_Modules/: A.Show.lune  B.OrphanShowInt.lune  B.ShowInt.lune  B.ShowInt2.lune  C.Main.lune  C.MissingInstance.lune  C.OrphanMain.lune  C.OverlapMain.lune
examples/invalid/: 00_ResultTooFewArgs.lune  01_ResultTooManyArgs.lune  02_IOTooManyArgs.lune  03_RecordDuplicateFields.lune  04_TypeAppArrowHead.lune  05_BadMonadArgKind.lune  06_OverlappingInstance.lune  07_OrphanInstance.lune  08_FFI_UnknownSymbol.lune  09_Derive_Json_Unsupported.lune
golden_programs/: HelloWorld.lune  ParseDemo.lune  RecordsDemo.lune  STMExample.lune
prelude/: Json.lune  Lune.Prelude.lune  Nova.lune  Template.lune
prelude/Lune/: Api.lune  Atomic.lune  Bool.lune  Bytes.lune  Char.lune  Database.lune  Fiber.lune  Float.lune  Http.lune  IO.lune  Int.lune  Json.lune  List.lune  Maybe.lune  Prelude.lune  Process.lune  Result.lune  Scheduler.lune  String.lune  System.lune  Task.lune  Time.lune
prelude/Nova/: Core.lune  Exec.lune  Prompt.lune  Runtime.lune  Tool.lune
scripts/: prelude-smoke.sh  typecheck-negative.sh  typeclass-negative.sh  validate-negative.sh
spec/: lune_database_framework_v0_1.md  lune_json_v0_1.md  lune_language_report_v0_1.md  lune_standard_library_v0_1.md  lune_web_framework_v0_1.md
src/Lune/: Builtins.hs  Check.hs  ClassEnv.hs  Core.hs  Derive.hs  Desugar.hs  Docs.hs  Elaborate.hs  Eval.hs  Fmt.hs  Infer.hs  InstanceEnv.hs  Kind.hs  ModuleGraph.hs  Parser.hs  Resolve.hs  Syntax.hs  Template.hs  Type.hs  TypeConvert.hs  Validate.hs
tests/: Main.hs
tests/fmt/: blank_then_comment.expected.lune  blank_then_comment.input.lune  comment_in_case.expected.lune  comment_in_case.input.lune  comments.expected.lune  comments.input.lune  do_blank_before_bind.expected.lune  do_blank_before_bind.input.lune  do_blank_line.expected.lune  do_blank_line.input.lune  do_comment.expected.lune  do_comment.input.lune  doc_comment.expected.lune  doc_comment.input.lune  inner_record.input.lune  layout.expected.lune  layout.input.lune  list_comment.expected.lune  list_comment.input.lune  lists.expected.lune  lists.input.lune  module_exposing.expected.lune  module_exposing.input.lune  pipe_do_bind.expected.lune  pipe_do_bind.input.lune  records.expected.lune  records.input.lune  trailing_decl.expected.lune  trailing_decl.input.lune  trailing_in_do.expected.lune  trailing_in_do.input.lune  type_app_parens.expected.lune  type_app_parens.input.lune
tests/lsp/: test_unicode.lune
tests/process/: 00_not_found.lune  01_basic_run.lune  02_capture_stdout.lune  (+11 more)
tree-sitter/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  test.lune  tree-sitter.json
tree-sitter/bindings/c/: tree-sitter-lune.pc.in
tree-sitter/bindings/go/: binding.go  binding_test.go
tree-sitter/bindings/node/: binding.cc  index.js
tree-sitter/bindings/python/tests/: test_binding.py
tree-sitter/bindings/python/tree_sitter_lune/: __init__.py  binding.c
tree-sitter/bindings/rust/: build.rs  lib.rs
tree-sitter/bindings/swift/TreeSitterLune/: lune.h
tree-sitter/bindings/swift/TreeSitterLuneTests/: TreeSitterLuneTests.swift
tree-sitter/queries/: highlights.scm
tree-sitter/src/: grammar.json  node-types.json  parser.c  scanner.c
tree-sitter/test/corpus/: annotations.txt  classes.txt  comments.txt  expressions.txt  foreign.txt  literals.txt  modules.txt  operators.txt  patterns.txt  pipes.txt  types.txt
(+242 files in other folders)
