cabal-version:      3.0
name:               lune
version:            0.1.0.0
license:            BSD-3-Clause
author:             Gareth Stokes
maintainer:         you@example.com
build-type:         Simple

-- Lune Compiler v0.1

library
  exposed-modules:
      Lune.Syntax
      Lune.Parser
      Lune.Desugar
      Lune.Validate
      Lune.Type
      Lune.Infer
      Lune.Check
      Lune.Kind
      Lune.TypeConvert
      Lune.ClassEnv
      Lune.InstanceEnv
      Lune.Core
      Lune.Codegen.C
      Lune.Elaborate
      Lune.Eval
      Lune.ModuleGraph
      Lune.Resolve

  other-modules:
      Lune.Builtins
      Lune.Eval.Types
      Lune.Eval.Runtime

  hs-source-dirs:   src
  build-depends:
      base >=4.16 && <4.21,
      containers,
      directory,
      filepath,
      text,
      transformers,
      megaparsec,
      parser-combinators

  default-language: Haskell2010
  default-extensions: OverloadedStrings

executable lune
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:
      base,
      containers,
      process,
      text,
      lune

  default-language: Haskell2010
  default-extensions: OverloadedStrings
