cabal-version:      3.0
name:               lune
version:            0.1.0.0
license:            BSD-3-Clause
author:             Gareth Stokes
maintainer:         you@example.com
build-type:         Simple

-- Lune Compiler v0.1

library
  exposed-modules:
      Lune.Syntax
      Lune.Parser
      Lune.Derive
      Lune.Derive.Table
      Lune.Desugar
      Lune.Validate
      Lune.Type
      Lune.Infer
      Lune.Check
      Lune.Kind
      Lune.TypeConvert
      Lune.ClassEnv
      Lune.InstanceEnv
      Lune.Core
      Lune.Codegen.C
      Lune.Codegen.Go
      Lune.Elaborate
      Lune.Eval
      Lune.ModuleGraph
      Lune.Resolve

  other-modules:
      Lune.Builtins
      Lune.Eval.FFI
      Lune.Eval.Types
      Lune.Eval.Runtime

  hs-source-dirs:   src
  build-depends:
      base >=4.16 && <4.21,
      bytestring >= 0.11,
      connection >= 0.3,
      containers,
      directory,
      filepath,
      network >= 3.1,
      text,
      time,
      transformers,
      megaparsec,
      parser-combinators,
      unix >= 2.7

  default-language: Haskell2010
  default-extensions: OverloadedStrings

executable lune
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:
      base,
      containers,
      directory,
      filepath,
      process,
      text,
      lune

  default-language: Haskell2010
  default-extensions: OverloadedStrings

test-suite golden
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   tests
  build-depends:
      base,
      bytestring,
      directory,
      filepath,
      process,
      tasty,
      tasty-golden,
      tasty-hunit,
      text

  default-language: Haskell2010
  default-extensions: OverloadedStrings
