cabal-version:      3.0
name:               lune
version:            0.1.0.0
license:            BSD-3-Clause
author:             Gareth Stokes
maintainer:         you@example.com
build-type:         Simple

-- Lune Compiler v0.1

library
  exposed-modules:
      Lune.Syntax
      Lune.Syntax.Comment
      Lune.Syntax.Located
      Lune.Syntax.AST
      Lune.Parser
      Lune.Derive
      Lune.Derive.Table
      Lune.Derive.Json
      Lune.Desugar
      Lune.Validate
      Lune.Type
      Lune.Infer
      Lune.Check
      Lune.Kind
      Lune.TypeConvert
      Lune.ClassEnv
      Lune.InstanceEnv
      Lune.Core
      Lune.Codegen.C
      Lune.Codegen.Go
      Lune.Elaborate
      Lune.Eval
      Lune.Fmt
      Lune.Fmt.Doc
      Lune.Fmt.Format
      Lune.ModuleGraph
      Lune.Resolve
      Lune.Pass.ANF
      Lune.LSP.Server
      Lune.LSP.State
      Lune.LSP.Handlers
      Lune.LSP.Convert

  other-modules:
      Lune.Builtins
      Lune.Docs
      Lune.Pretty.Type
      Lune.Template
      Lune.Eval.FFI
      Lune.Eval.Types
      Lune.Eval.Runtime
      Lune.Eval.Scheduler

  hs-source-dirs:   src
  build-depends:
      base >=4.16 && <4.21,
      async,
      bytestring >= 0.11,
      crypton-connection >= 0.4,
      containers,
      directory,
      filepath,
      network >= 3.1,
      stm,
      text,
      time,
      transformers,
      mtl,
      megaparsec,
      parser-combinators,
      process,
      lsp,
      lsp-types,
      unix >= 2.7

  default-language: Haskell2010
  default-extensions: OverloadedStrings

executable lune
  main-is:          Main.hs
  hs-source-dirs:   app
  ghc-options:      -threaded -rtsopts
  build-depends:
      base,
      containers,
      directory,
      filepath,
      process,
      text,
      lune

  default-language: Haskell2010
  default-extensions: OverloadedStrings

test-suite golden
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   tests
  build-depends:
      aeson,
      base,
      bytestring,
      directory,
      filepath,
      process,
      tasty,
      tasty-golden,
      tasty-hunit,
      text

  default-language: Haskell2010
  default-extensions: OverloadedStrings
